fixed bug where all pokemon in pc box was not showing

--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,6 @@
 .skin-ui {
   display: flex;
   flex-direction: column;
-  align-items: center;
   border: 1px solid black;
   border-radius: 8px;
   background-color: white;
@@ -91,11 +90,16 @@
 
 h4 {
   margin-top: 5%;
+  display: flex;
+  justify-content: center;
 }
 
 .skins {
   padding-left: 9px;
   margin-bottom: 7%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .skin {
